--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -8,7 +8,7 @@
             "type": "node",
             "request": "launch",
             "name": "Launch Chrome against localhost",
-            "program": "${workspaceFolder}/section6/중첩사용/index.js"
+            "program": "${workspaceFolder}/test.js"
         }
     ]
 }
